5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1871_2872.log
== TEST (2019-07-02 16:10:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= eval(array(input("Insira sua entrada:")))
area=1
for i in range(ent)	
	area= (ent[i,0]*ent[i,1])/2	
print(area)
-- ERROR:
File "XXXX", line 6
    for i in range(ent)	
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= eval(array(input("Insira sua entrada:")))
area=1
for i in range(ent):	
	area= (ent[i,0]*ent[i,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= array(eval(input("Insira sua entrada:")))
area=1
for i in range(ent):	
	area= (ent[i,0]*ent[i,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= array(eval(input("Insira sua entrada:")))
area= shape(ent)[0]

for i in range(ent):	
	area= (ent[i,0]*ent[i,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= array(eval(input("Insira sua entrada:")))
area= ent.shape(ent)[0]

for i in range(ent):	
	area= (ent[i,0]*ent[i,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= array(eval(input("Insira sua entrada:")))
area= ent.shape(ent)[0]

for i in range(ent):	
	area= (ent[:,0]*ent[:,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape(ent)[0]

for i in range(ent):	
	area= (ent[:,0]*ent[:,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape(ent)[0]

for i in range(ent):	
	area= (m[:,0]* m[:,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape(ent)[0]

for i in range(m):	
	area= (m[:,0]* m[:,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]

for i in range(m):	
	area= (m[:,0]* m[:,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]

for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]
a=0
for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
	a=sum(area)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]
a=0
for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
a=sum(area)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
a=sum(area)
media=a/3
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:23:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
a=sum(area)
media=a/3
print(round(media,2))

-- EXECUTION TIME:
1.20817
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,7.9]]
---- correct output:
21.12
---- user output:
21.12
-- TEST CASE 2:
---- input:
[[5.6,3.0],[2.2,1.1],[6.3,4.4]]
---- correct output:
7.82
---- user output:
7.82
-- TEST CASE 3:
---- input:
[[2,3,4],[3.4,5.5,6]]
---- correct output:
6.18
---- user output:
4.12
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
a=sum(area)
media=a/3
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
a=sum(area)
media=a/3
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[0]
s=0

for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
	s+=1
a=sum(area)

print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
a=sum(area)

print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
a=sum(area)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
a=sum(area)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]
s=0

for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
	s=s+1
a=sum(area)
media=a/s
print(round(media,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]
s=0

for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
	s=s+1
a=sum(area)
media=a/3
print(round(media,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]
s=0

for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
	s=s+1
a=sum(area)
media=a/3
print(round(media,2))
print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]
s=0
lin
for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
	
a=sum(area)
media=a/m.shape[0]
print(round(media,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
	
a=sum(area)
media=a/m.shape[0]
print(round(media,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:32:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("Insira sua entrada:")))
area= m.shape[1]


for i in range(size(m)):	
	area= (m[:,0]* m[:,1])/2	
	
a=sum(area)
media=a/m.shape[0]
print(round(media,2))



-- EXECUTION TIME:
0.982716
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,7.9]]
---- correct output:
21.12
---- user output:
21.12
-- TEST CASE 2:
---- input:
[[5.6,3.0],[2.2,1.1],[6.3,4.4]]
---- correct output:
7.82
---- user output:
7.82
-- TEST CASE 3:
---- input:
[[2,3,4],[3.4,5.5,6]]
---- correct output:
6.18
---- user output:
6.18
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
